--- a/action.yml
+++ b/action.yml
@@ -1,11 +1,19 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'changed-files'
+description: 'get changed files for a pull request'
+author: 'darmiel <hi@d2a.io>'
 inputs:
-  milliseconds: # change this
+  token:
     required: true
-    description: 'input description here'
-    default: 'default value if applicable'
+    description: 'GitHub Token'
+    default: ${{ github.token }}
+  pull-request-number:
+    required: false
+    description: 'Number of Pull Request'
+    default: ''
+  track:
+    required: true
+    description: which states to track
+    default: 'modified,added,removed'
 runs:
   using: 'node16'
   main: 'dist/index.js'
